<resources>
    <string name="app_name">TravelDreamsApp</string>
    <string name="travel">TRAVEL</string>
    <string name="dreams">DREAMS</string>
    <string name="explorar">Explorar</string>
    <string name="nav_home">Home</string>
    <string name="nav_destinos">Destinos</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_nosotros">Sobre Nosotros</string>
    <string name="nav_contacto">Contacto</string>
    <string name="menu_home">Home</string>
    <string name="menu_destinos">Destinos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_nosotros">Nosotros</string>
    <string name="title_activity_navigator_drawer">NavigatorDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="plogin">Iniciar Sesión</string>
    <string name="pregister">Registrarse</string>
    <string name="titulo_login">INICIAR SESION</string>
    <string name="titulo_login_name">Bienvenido</string>
    <string name="hint_first_name">Nombre</string>
    <string name="hint_last_name">Apellido</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="forgot_pasword">Olvidé mi contraseña</string>
    <string name="msjregistrate">¿No tienes cuenta?¡Registrate aqui!</string>
    <string name="register_title">INGRESE SUS DATOS</string>
    <string name="hint_name2">Nombre</string>
    <string name="hint_last_name2">Apellido</string>
    <string name="hint_email2">Correo Electonico</string>
    <string name="hint_password2">Contraseña</string>
    <string name="hint_confirm_password2">Confirmar Contraseña</string>
    <string name="conditional_pasword">Requiere: \n 8 caracteres y al menos un carácter especial (!, @, #, $, %)</string>
    <string name="txtprivacitytitle">Leí y Acepto</string>
    <string name="btnBackReg">Volver a Registro</string>
    <string name="txtprivacity">
        1. &lt;b&gt; Introducción:&lt;/b&gt; \n &lt;i&gt;En Travel Dreams, valoramos y respetamos su privacidad. Esta Política de Privacidad describe cómo recopilamos, utilizamos y protegemos su información personal cuando utiliza nuestros servicios a través de nuestra página web, aplicaciones móviles y otros servicios asociados. Al utilizar Travel Dreams, usted acepta los términos y condiciones descritos en esta política. &lt;/i&gt; \n  \n
        2. &lt;b&gt; &lt;i&gt;Información que Recopilamos:&lt;/i&gt; \n &lt;/b&gt;
            •   &lt;i&gt;Información de contacto:&lt;/i&gt; Nombre, dirección de correo electrónico, número de teléfono.\n
            •   &lt;i&gt;Información de viaje:&lt;/i&gt; Detalles de sus reservas, preferencias de viaje, itinerarios.\n
            •   &lt;i&gt;Información de pago:&lt;/i&gt; Detalles de tarjetas de crédito o débito, cuentas bancarias (procesada de forma segura por nuestros proveedores de pago).\n
            •   &lt;i&gt;Información técnica:&lt;/i&gt; Dirección IP, tipo de dispositivo, navegador, cookies y datos de rastreo. \n  \n
        3. &lt;b&gt;Fines de la Información Solicitada:&lt;/b&gt; \n
            •   &lt;i&gt;Procesar y gestionar sus reservas de viaje.&lt;/i&gt;\n
            •   &lt;i&gt;Enviar actualizaciones y y notificaciones relacionadas con su viaje.&lt;/i&gt; \n
            •   &lt;i&gt;Mejorar la experiencia de usuario y ofrecer recomendaciones personalizadas.&lt;/i&gt; \n
            •   &lt;i&gt;Cumplir con requisitos legales y regulatorios. &lt;/i&gt; \n
            •   &lt;i&gt;Proporcionar soporte al cliente y asistencia técnica.&lt;/i&gt; \n \n
        4. &lt;b&gt;Protección de sus Datos:&lt;/b&gt; \n En Travel Dreams, tomamos medidas para garantizar la seguridad de su información personal mediante el uso de tecnologías de encriptación y protocolos de seguridad avanzados. Los datos almacenados están protegidos en servidores seguros y solo son accesibles por personal autorizado. Además, trabajamos con proveedores de servicios de confianza que cumplen con las normativas de protección de datos aplicables. \n \n
        5. &lt;b&gt;Cookies y Tecnologías Similares:&lt;/b&gt; \n Utilizamos cookies para mejorar la funcionalidad de nuestra web y personalizar su experiencia. Puede controlar el uso de cookies a través de la configuración de su navegador. Al continuar utilizando nuestra web sin cambiar las preferencias de cookies, usted acepta el uso de estas. \n  \n
        6. &lt;b&gt;Compartir Información con Terceros:&lt;/b&gt; \n No compartimos su información personal con terceros, excepto en las siguientes circunstancias: \n
            •   Con proveedores de servicios de viaje, como aerolíneas, hoteles y empresas de transporte, para procesar y gestionar sus reservas. \n
            •   Con proveedores de pago para procesar transacciones seguras. \n
            •   Cuando sea requerido por la ley o autoridades regulatorias. \n  \n
        7. &lt;b&gt;Usted tiene derecho a: &lt;/b&gt; \n
            •   Acceder a sus datos personales. \n
            •   Solicitar la corrección de datos incorrectos. \n
            •   Solicitar la eliminación de sus datos personales. \n
            •   Retirar su consentimiento para el procesamiento de datos en cualquier momento. \n
            Para ejercer sus derechos, por favor póngase en contacto con nosotros en &lt;b&gt;traveldreams.team@gmail.com&lt;/b&gt;. \n  \n
        8. &lt;b&gt;Cambios a esta Política:&lt;/b&gt;  \n Nos reservamos el derecho de actualizar esta Política de Privacidad en cualquier momento. Le notificaremos de cualquier cambio publicando la nueva política en nuestra página web y actualizando la fecha de "última actualización". \n \n
        9. &lt;b&gt;Contacto:&lt;/b&gt;  \n Si tiene preguntas o inquietudes sobre esta política, puede contactarnos en: \n \n
            &lt;i&gt;&lt;b&gt;Travel Dreams&lt;/b&gt;&lt;/i&gt; \n
            &lt;i&gt;&lt;b&gt;Correo electrónico:&lt;/b&gt; &lt;b&gt;traveldreams.team@gmail.com&lt;/b&gt; &lt;/i&gt; \n
            &lt;i&gt;&lt;b&gt;Teléfono:&lt;/b&gt; +34 900 123 456 &lt;/i&gt; \n
    </string>
    <string name="titulo_destino">TITULO DEL DESTINO</string>
    <string name="descripcion_destino">Descripción corta del destino</string>
    <string name="precio_destino">$00.00</string>
    <string name="boton_comprar">Comprar</string>
    <string name="fecha_salida">Fecha de Salida</string>
    <string name="cantidad_Disponible">Cupos Disponibles</string>
    <string name="boton_mas_detalles">Más Detalles</string>
    <string name="destDetTitulo">TITULO DEL DESTINO</string>
    <string name="destDetDescripcion">Descripción del destino</string>
    <string name="destDetFechaSalida">Fecha de Salida</string>
    <string name="destDetPrecioUnitario">Precio Unitario</string>
    <string name="destDetSelecCantidad">Seleccione Cantidad:</string>
    <string name="destDetRestar">−</string>
    <string name="destDetStepper">1</string>
    <string name="destDetSumar">+</string>
    <string name="destDetCupos">Cupos Disponibles</string>
    <string name="destDetTotal">Total</string>
    <string name="destDetBtnAgregarCarrito"> <b>🛒</b> Agregar al carrito</string>
    <string name="cartItTitulo">TITULO DEL DESTINO</string>
    <string name="cartItFechaSalida">Salida</string>
    <string name="cartItFechaSalidaNum">YYYY-MM-DD</string>
    <string name="cartItCupos">Cupos</string>
    <string name="cartItCuposNum">XX</string>
    <string name="cartItCantidad">Cant.</string>
    <string name="cartItPrecio">Sub T</string>
    <string name="cartItPrecioNum">$0.00</string>
    <string name="cartItPrecioU">Precio</string>
    <string name="cartItPrecioUnum">$0.00</string>
    <string name="cartItEliminar">Eliminar</string>
    <string name="cartItDescImag">Descripcion de Imagen del Prodúcto</string>
    <string name="cartItBtnComprarYa">Comprar Ahora</string>
    <string name="cartItSeleccionarTodo">Seleccionar Todo</string>
    <string name="cartItSuma">+</string>
    <string name="cartItResta">-</string>
    <string name="cartItnum">1</string>
    <string name="cartItmedios_pago">Elegí el medio de pago:</string>
    <string name="FCmedios_pago">Elegí el medio de pago:</string>
    <string name="FCTotal">Total:</string>
    <string name="FCFinalizarcompra">Finalizar Compra</string>
    <string name="FCSeleccionarTodo">Seleccionar Todo</string>
    <string name="descripcion_imagen">Imagen del destino</string>
    <string name="descripcion_titulo_destino">Título del destino mostrado en la tarjeta</string>
    <string name="descripcion_precio">Precio del destino mostrado en la tarjeta</string>
    <string name="descripcion_boton_comprar">Botón para comprar el destino</string>
    <string name="hint_name">Nombre y Apellido</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="register_button">Registrarse</string>
    <string name="quienes_somos">¿Quiénes somos?</string>
    <string name="description_quienes_somos">Desde hace 20 años, Travel Dreams ha sido la brújula que guía a aventureros de todas las edades en sus viajes más esperados. Nuestra misión trasciende un simple itinerario; es una promesa de aventura, descubrimiento y recuerdos que perduran toda la vida.</string>
    <string name="equipo">Nuestro Equipo</string>
    <string name="m_1">Cantarino, Emmanuel</string>
    <string name="m_1_profile">Desarrollador</string>
    <string name="m_2">Cascallares, Facundo</string>
    <string name="m_2_profile">Desarrollador</string>
    <string name="m_3">Fernandez, Claudio Ranses</string>
    <string name="m_3_profile">Desarrollador</string>
    <string name="m_4">Soto Valenzuela, Juan Gabriel</string>
    <string name="m_4_profile">Desarrollador</string>
    <string name="contact_title">Contacto</string>
    <string name="contact_subtitle">Si tienes preguntas, comentarios o sugerencias, por favor, no dudes en enviarnos un mensaje.</string>
    <string name="hint_cname">Nombre</string>
    <string name="hint_cemail">Correo Electrónico</string>
    <string name="hint_message">Escribe tu mensaje aquí...</string>
    <string name="submit_button">Enviar</string>
    <string name="recovery_password_hint">Ingrese su correo electrónico para recuperar su contraseña. Un administrador se pondra en contacto con usted a la brevedad..</string>
    <string name="menu_cart">Mi Carrito</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy_policy">Política de Privacidad</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="menu_additional_options">Opciones Adicionales</string>
</resources>