<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"  xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_destinos"
            android:icon="@drawable/ic_destinos"
            android:title="@string/menu_destinos" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_nosotros"
            android:icon="@drawable/ic_nosotros"
            android:title="@string/menu_nosotros" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_contacto"
            android:title="@string/menu_contacto" />
    </group>

    <item android:title="@string/menu_additional_options">
        <menu>
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart"
                android:title="@string/menu_cart" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_privacy"
                android:title="@string/menu_privacy_policy" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>