<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/destDetScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Imagen -->
            <ImageView
                android:id="@+id/destDetImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen del destino" />

            <!-- Título -->
            <TextView
                android:id="@+id/destDetTxtTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destDetTitulo"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="12dp" />

            <!-- Descripción -->
            <TextView
                android:id="@+id/destDetTxtDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destDetDescripcion"
                android:layout_marginTop="8dp" />

            <!-- Fecha de Salida -->
            <TextView
                android:id="@+id/destDetFechaSalida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destDetFechaSalida"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />


            <!-- Precio unitario -->
            <TextView
                android:id="@+id/destDetTxtPrecioUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destDetPrecioUnitario"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <!-- Spinner cantidad -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destDetSelecCantidad"
                android:layout_marginTop="12dp" />

            <LinearLayout
                android:id="@+id/destDetCantContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="12dp">

                <Button
                    android:id="@+id/destDetBtnRestar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:text="@string/destDetRestar"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/btn"
                    android:background="@android:drawable/btn_default" />


                <TextView
                    android:id="@+id/destDetTxtCantidad"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/destDetStepper"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/destDetBtnSumar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="8dp"
                    android:text="@string/destDetSumar"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/btn"
                    android:background="@android:drawable/btn_default" />

            </LinearLayout>



            <!-- Cupos -->
            <TextView
                android:id="@+id/destDetTxtCupos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destDetCupos"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

            <!-- Total -->
            <TextView
                android:id="@+id/destDetTxtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destDetTotal"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

            <!-- Botón agregar al carrito -->
            <Button
                android:id="@+id/destDetBtnAgregarCarrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destDetBtnAgregarCarrito"
                android:layout_marginTop="24dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
