<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_nombre_Destino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_destino"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tv_fecha_salida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_salida"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tv_cupos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad_Disponible"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tv_precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_destino"
                    android:textColor="@color/nav"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_comprar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/boton_mas_detalles"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/button_background"
                    android:padding="12dp"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_precio" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>